fix overlapping body over header

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -21,42 +21,6 @@ body {
   background-attachment: fixed;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-}
-::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background: $main-light;
-}
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: $main-dark;
-}
-
-.container-landing {
-  height: 80vh;
-}
-
-.h1-landing {
-  font-size: 6em;
-  color: $main-lighter;
-}
-
-.h5-landing {
-  color: $main-dark;
-}
-
-.img-landing {
-  // z-index: -1;
-  margin: 5px 0;
-  height: auto;
-  max-width: 350px;
-}
-
-.p-landing {
-  color: $main-lighter;
-}
-
 button {
   white-space: nowrap;
 }
@@ -89,6 +53,38 @@ footer {
 
 #studentslist hr {
   width: 60%;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: $main-light;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: $main-dark;
+}
+
+.h1-landing {
+  font-size: 6em;
+  color: $main-lighter;
+}
+
+.h5-landing {
+  color: $main-dark;
+}
+
+.img-landing {
+  // z-index: -1;
+  margin: 5px 0;
+  height: auto;
+  max-width: 350px;
+}
+
+.p-landing {
+  color: $main-lighter;
 }
 
 .error-message {
